NEWS for Antiprism: http://www.antiprism.com

Version 0.22
xx-10-12 Adrian Rossiter <adrian@antiprism.com>
         New Programs
         Changes
            Uniform polyhedra (U models) calculated by formula
              rather than "kaleido" code (Roger Kaufman)
            Standard uniform models use new U models, many resource
               models may be prefixed by std_ (Roger Kaufman).
            New resource models: Wythoff construction (wythoff_ ),
               Schwarz triangle (schwarz_), regular polygon (pol)
            lat_util: -R takes extra blending option
            off_util: -b default is rgb
            planar: various option changes and new options
         Fixes
            Some Johnson polyhedra not connected correctly
            Some errors reading OFF files were not reported
            Other small fixes.



Version 0.21
26-03-12 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            off_normals: new program for working with normals (Roger
              Kaufman)
            leonardo: creates Leonardo da Vinci style models
         Changes
            off_query: Vg for vertex figures (Vn for connections only)
            off_report: windings of vertex figures added, more
              connectivity information
            off_util: -O takes an argument, -t 'triangulate' is synonym
              for nonzero, abs_geq_two removed
            conv_hull: hulls are positively oriented. Better check for
               2D models in dimension-safe convex hull.
            antiview,off2pov,off2vrml: -t abs_geq_two removed
            Models: Coxeter, Wenninger and Kaleido numbers as alternative
              names for uniforms (Roger Kaufman).
         Fixes
            Some Johnson polyhedra not connected correctly
            waterman: not producing correct output
            Triangulation not applying winding rules to triangle faces
            planar: disallows creation of zero length edges