@@ -74,6 +74,13 @@ file for changes in the Antiprism releases.
 </TR>
 
 <TR CLASS=tbl1 VALIGN=TOP>
+<TD>18/10/2012</TD>
+<TD>
+Antiprism 0.22 released. Program documentation updated.
+</TD>
+</TR>
+
+<TR CLASS=tbl1 VALIGN=TOP>
 <TD>26/03/2012</TD>
 <TD>
 Antiprism 0.21 released. Program documentation updated. Examples
