@@ -34,9 +34,9 @@
    </Company_Info>
    <Program_Info>
       <Program_Name>Antiprism</Program_Name>
-      <Program_Version>0.21</Program_Version>
-      <Program_Release_Month>03</Program_Release_Month>
-      <Program_Release_Day>26</Program_Release_Day>
+      <Program_Version>0.22</Program_Version>
+      <Program_Release_Month>10</Program_Release_Month>
+      <Program_Release_Day>18</Program_Release_Day>
       <Program_Release_Year>2012</Program_Release_Year>
       <Program_Cost_Dollars>0.00</Program_Cost_Dollars>
       <Program_Cost_Other_Code>EUR</Program_Cost_Other_Code>
@@ -44,9 +44,9 @@
       <Program_Type>Freeware</Program_Type>
       <Program_Release_Status>Beta</Program_Release_Status>
       <Program_Install_Support>Install and Uninstall</Program_Install_Support>
-      <Program_OS_Support>Linux,Linux Console,Linux Gnome,Linux GPL,Linux Open Source,Mac OS X,MS-DOS,Unix,Win2000,Win7 x32,Win98,WinVista,WinXP,Other</Program_OS_Support>
+      <Program_OS_Support>MS-DOS,Win2000,Win7 x32,Win98,WinVista,WinXP</Program_OS_Support>
       <Program_Language>English</Program_Language>
-      <Program_Change_Info>Bug fixes, new programs</Program_Change_Info>
+      <Program_Change_Info>Bug fixes, higher precision models</Program_Change_Info>
       <Program_Specific_Category>Education</Program_Specific_Category>
       <Program_Category_Class>Education::Mathematics</Program_Category_Class>
       <Program_Categories>Graphics::Visualization</Program_Categories>
@@ -55,8 +55,8 @@
       <Includes_VB_Runtime>N</Includes_VB_Runtime>
       <Includes_DirectX>N</Includes_DirectX>
       <File_Info>
-         <Filename_Versioned>aprism21.zip</Filename_Versioned>
-         <Filename_Previous>aprism20.zip</Filename_Previous>
+         <Filename_Versioned>aprism22.zip</Filename_Versioned>
+         <Filename_Previous>aprism21.zip</Filename_Previous>
          <Filename_Generic>aprism.zip</Filename_Generic>
          <Filename_Long>antiprism.zip</Filename_Long>
          <File_Size_Bytes>5000000</File_Size_Bytes>
@@ -92,10 +92,10 @@
          <Application_XML_File_URL>http://www.antiprism.com/files/pad_file.xml</Application_XML_File_URL>
       </Application_URLs>
       <Download_URLs>
-         <Primary_Download_URL>http://www.antiprism.com/files/antiprism-0.21_install.exe</Primary_Download_URL>
-         <Secondary_Download_URL>http://www.antiprism.com/files/antiprism-0.21_install.exe</Secondary_Download_URL>
-         <Additional_Download_URL_1>http://www.antiprism.com/files/antiprism-0.21_install.exe</Additional_Download_URL_1>
-         <Additional_Download_URL_2>http://www.antiprism.com/files/antiprism-0.21_install.exe</Additional_Download_URL_2>
+         <Primary_Download_URL>http://www.antiprism.com/files/antiprism-0.22_install.exe</Primary_Download_URL>
+         <Secondary_Download_URL>http://www.antiprism.com/files/antiprism-0.22_install.exe</Secondary_Download_URL>
+         <Additional_Download_URL_1>http://www.antiprism.com/files/antiprism-0.22_install.exe</Additional_Download_URL_1>
+         <Additional_Download_URL_2>http://www.antiprism.com/files/antiprism-0.22_install.exe</Additional_Download_URL_2>
       </Download_URLs>
    </Web_Info>
    <Permissions>
